--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.0.1"
   },
-  "engines": { "node": ">=14.20.1" }
+  "engines": {
+    "node": ">=14.20.1"
+  }
 }
