--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
     "node-cache": "^5.1.2",
-    "nodemon": "^3.0.1"
+    "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.1",
+    "speakeasy": "^2.0.0",
+    "winston": "^3.11.0"
   },
   "engines": {
     "node": ">=14.20.1"
